Enhance game modal with play icon and update styles for improved user experience

--- a/templates/game.html
+++ b/templates/game.html
@@ -22,7 +22,9 @@
     <!-- Pop up Modal -->
     <div id="popup-modal" class="modal">
         <div class="modal-content">
-            <button id="play-button" class="play-btn">Play</button>
+            <button id="play-button" class="play-btn">
+                <img src="{{ url_for('static', filename='icons/play-icon.png') }}" alt="Play" class="play-icon">
+            </button>
         </div>
     </div>
 
