--- a/templates/game.html
+++ b/templates/game.html
@@ -20,13 +20,13 @@
     <div id="options"></div>
 
     <!-- Pop up Modal -->
-    <div id="popup-modal" class="modal">
+    <!-- <div id="popup-modal" class="modal">
         <div class="modal-content">
             <button id="play-button" class="play-btn">
                 <img src="{{ url_for('static', filename='icons/play-icon.png') }}" alt="Play" class="play-icon">
             </button>
         </div>
-    </div>
+    </div> -->
 
     <script src="{{ url_for('static', filename='js/play.js') }}"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
