Remove user registration logic and modal to streamline game start process

--- a/templates/game.html
+++ b/templates/game.html
@@ -19,7 +19,7 @@
     <div id="banner"></div>
     <div id="options"></div>
 
-    <!-- User Info Modal -->
+    <!-- User Info Modal
     <div id="user-modal" class="modal">
         <div class="modal-content">
             <h2>Enter Your Details</h2>
@@ -30,7 +30,7 @@
                 <button type="submit">Start Game</button>
             </form>
         </div>
-    </div>
+    </div> -->
 
     <script src="{{ url_for('static', filename='js/play.js') }}"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
