--- a/templates/game.html
+++ b/templates/game.html
@@ -19,6 +19,7 @@
     {% endif %}
 
     <div id="header">
+        <div id="player-name">{{ username }}</div>
         <h1>Emoji Match Game</h1>
         <div id="score">Score: {{ current_score }}</div>
     </div>
