--- a/templates/game.html
+++ b/templates/game.html
@@ -9,26 +9,25 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-
-    <script>
-        let initialScore = {{ current_score }};
-    </script>
-
     {% if 'user_id' not in session %}
-    <script>window.location.href = "/register";</script>
+        <script>window.location.href = "/register";</script>
+    {% else %}
+        <script>
+            let initialScore = {{ current_score }};
+        </script>
+
+        <div id="header">
+            <div id="player-name">{{ username }}</div>
+            <h1>Emoji Match Game</h1>
+            <div id="score">Score: {{ current_score }}</div>
+        </div>
+
+        <div id="countdown">Time left: 5s</div>
+        <div id="target-emoji">😄</div>
+        <div id="banner"></div>
+        <div id="options"></div>
+
+        <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     {% endif %}
-
-    <div id="header">
-        <div id="player-name">{{ username }}</div>
-        <h1>Emoji Match Game</h1>
-        <div id="score">Score: {{ current_score }}</div>
-    </div>
-
-    <div id="countdown">Time left: 5s</div>
-    <div id="target-emoji">😄</div>
-    <div id="banner"></div>
-    <div id="options"></div>
-
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 </html>
